<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cyrilbouche.myhashtag.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.cyrilbouche.myhashtag.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_climate"
        android:name="com.cyrilbouche.myhashtag.ui.climate.ClimateFragment"
        android:label="@string/title_climate"
        tools:layout="@layout/fragment_climate" />

    <fragment
        android:id="@+id/navigation_charge"
        android:name="com.cyrilbouche.myhashtag.ui.charge.ChargeFragment"
        android:label="@string/title_charge"
        tools:layout="@layout/fragment_charge" />
</navigation>