<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.climate.ClimateFragment">

    <!--TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" /-->


    <LinearLayout
        android:id="@+id/preClimateZone"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/preClimate"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:text="Pre climate"
            tools:ignore="UseSwitchCompatOrMaterialXml" />



    </LinearLayout>

    <LinearLayout
        android:id="@+id/iconsBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/preClimateZone">

        <ImageView
            android:id="@+id/iconEco"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_energy_savings_leaf_24">
        </ImageView>

        <ImageView
            android:id="@+id/iconAc"
            android:layout_width="35dp"
            android:layout_height="35dp">
        </ImageView>

        <ImageView
            android:id="@+id/iconFan"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_mode_fan_24">
        </ImageView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iconsBar"
        android:id="@+id/thermostat">

        <!-- TextView for displaying temperature at the top -->
        <TextView
            android:id="@+id/temperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="25°C"
            android:textSize="45sp" />

        <!-- SeekBar for adjusting temperature below the TextView -->
        <SeekBar
            android:id="@+id/temperatureSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/temperatureTextView"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:max="28"
            android:min="16"
            android:progress="20"
            android:thumb="@drawable/seekbar_thumb"
            android:thumbOffset="4dp" />

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/presets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/thermostat"
        >

        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="Eco"
            android:textSize="12sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="Confort"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="Confort+"
            android:textSize="12sp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/presets"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="255dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Switch
                android:id="@+id/drvHeatSwitch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/drv_seat_heat"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <Switch
                android:id="@+id/passHeatSwitch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/pass_seat_heat"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seat_heat_pwr"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:layout_weight="3"/>

                <Spinner
                    android:id="@+id/spinner_options"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:padding="8dp"
                    android:entries="@array/heat_options_array" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <Switch
                android:id="@+id/strWhlSwitch"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/str_whl_heat"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </com.google.android.material.chip.ChipGroup>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>